@@ -4,6 +4,7 @@ Date: ????
   Info:
     - Get stuck trying to connect fluidboxes from everywhere
     - chatgtp my ass
+    - Get the fluid positions code to behave
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.8
 Date: 2025. 06. 10
